# Quant_Practise

./: .gitignore  24_WEEK_VERIFICATION_PLAN.md  AUDIT_REPORT.md  EXECUTION_PLAN.md  FINAL_SUMMARY.md  README.md  SUMMARY.md  plan.md  pyproject.toml
.github/workflows/: deploy-pages.yml
admissions/: README.md
admissions/week-01/: tasks.md
admissions/week-02/: tasks.md
admissions/week-03/: tasks.md
admissions/week-04/: tasks.md
admissions/week-05/: tasks.md
admissions/week-06/: tasks.md
admissions/week-07/: tasks.md
admissions/week-08/: tasks.md
admissions/week-09/: tasks.md
admissions/week-10/: tasks.md
admissions/week-11/: tasks.md
admissions/week-12/: tasks.md
admissions/week-13/: tasks.md
admissions/week-14/: tasks.md
admissions/week-15/: tasks.md
admissions/week-16/: tasks.md
admissions/week-17/: tasks.md
admissions/week-18/: tasks.md
admissions/week-19/: tasks.md
admissions/week-20/: tasks.md
admissions/week-21/: tasks.md
admissions/week-22/: tasks.md
admissions/week-23/: tasks.md
admissions/week-24/: tasks.md
curriculum/: curriculum-index.json  roadmap.md
docs/: SUPABASE_SETUP_BEGINNER.md
interview/: README.md
interview/week-01/: tasks.md
scripts/: enhance_weekday_lessons.py  export_assets.py  generate_all_week_notebooks.py  generate_full_curriculum.py  run_notebooks.py  run_react_week_pipeline.py  sync_web_assets.py  verify_roadmap.py
supabase/: schema.sql
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+883 files in other folders)
